k8s/04-networking/allow-digest-exporter-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-digest-exporter-egress
  namespace: kubeintel
spec:
  podSelector:
    matchLabels:
      app: digest-exporter
  policyTypes:
    - Egress
  egress:
    # postgres
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - protocol: TCP
          port: 5432
    # github api
    - ports:
        - protocol: TCP
          port: 443
