k8s/04-networking/allow-digest-exporter-to-postgres.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-digest-exporter-to-postgres
  namespace: kubeintel
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: digest-exporter
      ports:
        - protocol: TCP
          port: 5432
