k8s/04-networking/allow-ingress-to-n8n.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress-to-n8n
  namespace: kubeintel
spec:
  podSelector:
    matchLabels:
      app: n8n
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5678
