k8s/04-networking/allow-prometheus-to-summarizer.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-summarizer
  namespace: kubeintel
spec:
  podSelector:
    matchLabels:
      app: summarizer-api
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 8000
