k8s/04-networking/allow-summarizer-egress-internet.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-summarizer-egress-internet
  namespace: kubeintel
spec:
  podSelector:
    matchLabels:
      app: summarizer-api
  policyTypes:
    - Egress
  egress:
    - ports:
        - protocol: TCP
          port: 443
